[package]
name = "nrf5x-prx"
version = "0.0.1"
edition = "2018"
authors = [ "Thales Fragoso <thales.fragosoz@gmail.com>"]

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtfm = "0.5.1"
esb = {path = "../../esb"}
rtt-target = {version = "0.2.0", features = ["cortex-m"] }

nrf52810-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.10", features = ["rt"], optional = true }
nrf51-hal = {version = "0.10.0", features = ["rt"], optional = true}

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "nrf5x-prx"
doc = false
test = false

[features]
fast-ru = ["esb/fast-ru"]
51 = ["esb/51", "nrf51-hal"]
52810 = ["esb/52810", "nrf52810-hal"]
52832 = ["esb/52832", "nrf52832-hal"]
52840 = ["esb/52840", "nrf52840-hal"]
