[package]
name = "nrf5x-ptx"
version = "0.0.1"
edition = "2018"
authors = [ "Thales Fragoso <thales.fragosoz@gmail.com>"]

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtfm = "0.5.1"
cortex-m-rt = "0.6.12"
panic-semihosting = "0.5.3"
bbqueue = "0.4.6"
esb = {path = "../../esb"}
asm-delay = "0.7.0"
embedded-hal = "0.2.3"
cortex-m-semihosting = "0.3.5"

nrf52810-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.10", features = ["rt"], optional = true }
nrf51-hal = {version = "0.10.0", features = ["rt"], optional = true}

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "nrf5x-ptx"
doc = false
test = false

[features]
51 = ["esb/52810", "nrf51-hal"]
52810 = ["esb/52810", "nrf52810-hal"]
52832 = ["esb/52832", "nrf52832-hal"]
52840 = ["esb/52840", "nrf52840-hal"]
